--- a/styles/forus.css
+++ b/styles/forus.css
@@ -1,9 +1,9 @@
 .for-us {
-  margin-bottom: 100px;
+  margin-bottom: 105px;
 }
 
 .for-us__top {
-  padding-right: 535px;
+  width: 69.5%;
 }
 
 .section-title {
@@ -21,8 +21,8 @@
 }
 
 .for-us__description {
-  margin-top: 20px;
-  margin-bottom: 43px;
+  margin-top: 22px;
+  margin-bottom: 48px;
   font-weight: 400;
   line-height: 32px;
 }
@@ -34,24 +34,26 @@
 }
 
 .for-us__news {
-  width: 870px;
-  padding-top: 445px;
-  display: flex;
+  width: 49%;
+  padding-top: 425px;
+  display: flex; 
+  flex-direction: column;
   background-image: url("../img/benefit1x.jpg");
   background-size: cover;
 }
 
 .news-info {
-  width: 100%;
+  
   align-self: flex-end;
   display: flex;
   justify-content: space-between;
-  padding: 40px 65px 40px 54px;
+  padding: 50px 45px 50px 50px;
   z-index: 5;
   background-color: rgba(0, 0, 0, 0.5);
 }
 
 .news-text {
+  width: 60%;
   font-weight: 700;
   font-size: 16px;
   line-height: 32px;
@@ -60,7 +62,7 @@
 
 .news-btn {
   align-self: center;
-  margin-left: 55px;
+  
   padding: 20px 36px;
   border: 3px solid var(--color-orange);
   font-size: 16px;
@@ -75,7 +77,7 @@
 
 .for-us__list {
   width: 49%;
-  display: flex;
+  display: inline-flex;
   flex-direction: column;
   justify-content: space-between;
 }
