--- a/styles/questions.css
+++ b/styles/questions.css
@@ -1,9 +1,9 @@
 .questions {
-  margin-bottom: 100px;
+  margin-bottom: 97px;
 }
 
 .questions-title {
-  margin-bottom: 40px;
+  margin-bottom: 42px;
 }
 
 .questions__list {
@@ -13,12 +13,13 @@
 .questions__item {
   width: 100%;
   border-bottom: 1px solid #CACACA;
-  margin-top: 37px;
-  padding-bottom: 24px;
+  margin-top: 38px;
+  padding-bottom: 23px;
 }
 
 .questions-item__visible {
   width: 100%;
+  padding: 0;
   display: flex;
   justify-content: space-between;
 }
