--- a/styles/forus.css
+++ b/styles/forus.css
@@ -86,20 +86,21 @@
   display: flex;
   justify-content: start;
   border: 1px solid #CACACA;
-  padding: 35px 110px 50px 60px;
+  padding: 45px 110px 45px 55px;
 }
 
 .benefit-item__img{
-  min-width: 178px;
-  margin-right: 58px;
+  min-width: 190px;
+  margin-right: 50px;
 }
 
 .benefit-item__content {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .benefit-item__title {
   margin: 0;
+  margin-bottom: 10px;
   font-weight: 700;
   font-size: 24px;
   line-height: 29px;
