--- a/styles/media-worktab.css
+++ b/styles/media-worktab.css
@@ -1,6 +1,10 @@
 @media (max-width: 1024px) {
   .worktab {
-    margin-bottom: 58px;
+    margin-bottom: 80px;
+  }
+
+  .section-title {
+    padding-left: 5px;
   }
   
   .worktab-container {
@@ -9,10 +13,11 @@
 
   .worktab-step__buttons {
     padding-left: 5px;
+    margin-bottom: 50px;
   }
 
   .step__item:not(:last-child) {
-    margin-right: 85px;
+    margin-right: 80px;
   }
 
   .worktab-description__list {
@@ -25,12 +30,13 @@
   }
 
   .description-item__title {
-    margin-bottom: 0;
+    margin-top: 0;
+    margin-bottom: 10px;
   }
 
   .description-item__text {
     width: 47%;
-    margin-bottom: 30px;
+    margin-bottom: 27px;
   }
 }
 
@@ -63,12 +69,12 @@
   }
 
   .description-item__title {
-    padding-top: 320px;
+    padding-top: 325px;
   }
 
   .description-item__text {
     width: 100%;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
   }
 }
 
@@ -111,7 +117,8 @@
   }
 
   .worktab-title {
-    margin-bottom: 24px;
+    padding-left: 0;
+    margin-bottom: 22px;
     font-size: 24px;
     line-height: 29px;
   }
