--- a/styles/worktab.css
+++ b/styles/worktab.css
@@ -21,7 +21,7 @@
   margin-right: 80px;
 }
 
-.step__item.active .step-item__btn{
+.step-item__btn.active {
   color: var(--color-orange);
 }
 
@@ -38,10 +38,34 @@
   outline: 1px solid var(--color-orange);
 }
 
+.worktab-description__list {
+  display: none;
+}
+
+.worktab-description-active {
+  display: block;
+}
+
 .description-item {
-  background: url('../img/step1-big.jpg') no-repeat;
   background-size: 49%;
   background-position: center right;
+  background-repeat: no-repeat;
+}
+
+.description-item--one {
+  background-image: url('../img/step1-big.jpg');
+}
+
+.description-item--two {
+  background-image: url('../img/step2-big.jpg');
+}
+
+.description-item--tree {
+  background-image: url('../img/step3-big.jpg');
+}
+
+.description-item--four {
+  background-image: url('../img/step4-big.jpg');
 }
 
 .description-item__title {
