--- a/styles/questions.css
+++ b/styles/questions.css
@@ -65,7 +65,7 @@
   width: 30px;
   height: 2px;
   background: #666666;
-  transition: background 0.3s ease-in-out;
+  transition: background 0.3s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .questions-item__btn::before {
@@ -77,7 +77,7 @@
   width: 2px;
   height: 30px;
   background: #666666;
-  transition: background 0.3s ease-in-out;
+  transition: background 0.5s ease-in-out, transform 0.5s ease-in-out;
 }
 
 .questions-item__btn:hover {
