--- a/styles/open-menu.css
+++ b/styles/open-menu.css
@@ -1,29 +1,29 @@
+@keyframes hideLeft {
+
+  from {left:0;}
+  
+  to {left:-100%;}
+  
+  }
+
+@keyframes showLeft {
+
+  from {left:-100%;}
+  
+  to {left:0;}
+}
+
 @media (max-width: 1024px) {
 
   .burger-visible {
     overflow: hidden;
   }
 
-	/* .burger-visible .header__menu {
-		opacity: 1;
-		visibility: visible;
-		overflow: auto;
-		padding-bottom: 80px;
-	} */
-
-	.burger-visible .header {
-		width: 100%;
-    height: 100%;
-		position: fixed;
-		background-color: #ffffff;
-		z-index: 28;
-	}
-
-  .burger-visible .header-container {
+  /* .burger-visible .header-container {
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
-  }
+  } */
 
   .burger-visible .header-burger {
     margin-top: 38px;
@@ -31,53 +31,122 @@
     align-self: flex-start;
   }
 
-  .burger-visible .header-logo {
+  .burger-visible .header-burger-line:nth-child(1) {
+    left: 0;
+    top: 0;
+    transform: rotate(45deg);
+  }
+  
+  .burger-visible .header-burger-line:nth-child(2) {
+    opacity: 0;
+  }
+  
+  .burger-visible .header-burger-line:nth-child(3) {
+    left: 0;
+    top: 0;
+    transform: rotate(-45deg);
+  }
+
+  .burger-visible .header-burger:hover .header-burger-line:nth-child(3) {
+    width: 100%;
+    transition: all 0.2s ease-in-out;
+  }
+
+  /* .burger-visible .header-logo {
     margin-top: 26px;
     margin-left: 34vw;
     height: 48px;
-  }
+  } */
 
-  .burger-visible .header-bar {
+  /* .burger-visible .header-bar {
     width: 100%;
     margin-top: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
+  } */
 
   .burger-visible .header__menu {
-    display: block;
-    height: auto;
+   
+    left: 0;
+
+    /* animation: showLeft 1s; */
+    transition: left 0.7s ease-in-out;
   }
 
-  .burger-visible .header__list{
-    flex-direction: column;
-    height: auto;
-    margin-right: 0;
-    margin-left: 15vw;
-    padding-top: 0;
-  }
+ 
+}
 
-  .burger-visible .header__item {
-    margin-bottom: 30px;
+@media (max-width: 975px) {
+ .header__menu {
+    height: 625px;
   }
+}
 
-  .burger-visible .header__search {
-    align-self: center;
+@media (max-width: 861px) {
+   .header__menu {
+    height: 720px;
+  }
+}
+
+@media (max-width: 768px) {
+  .header__menu {
+    height: 740px;
+  }
+}
+
+@media (max-width: 733px) {
+   .header__menu {
+    height: 794px;
   }
 }
 
 @media (max-width: 640px) {
+ .header__menu {
+    width: 100%;
+    height: 610px;
+  }
+}
 
-  .burger-visible .header-logo {
-    margin-left: 20vw;
+@media (max-width: 585px) {
+   .header__menu {
+    height: 630px;
+  }
+}
+
+@media (max-width: 497px) {
+  .header__menu {
+    height: 670px;
+  }
+}
+
+@media (max-width: 451px) {
+   .header__menu {
+    height: 690px;
+  }
+}
+
+@media (max-width: 401px) {
+   .header__menu {
+    height: 730px;
+  }
+}
+
+@media (max-width: 375px) {
+   .header__menu {
+    height: 377px;
   }
 
-  .burger-visible .header__list{
-    margin-left: 12vw;
+   .header__list{
+    top: 80px;
+    left: 20px;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    padding-top: 0;
   }
 
-  .burger-visible .header__search {
-    align-self: center;
+   .header__item {
+    margin-bottom: 30px;
   }
 }
