--- a/styles/open-menu.css
+++ b/styles/open-menu.css
@@ -26,7 +26,7 @@
   } */
 
   .burger-visible .header-burger {
-    margin-top: 38px;
+    margin-top: 48px;
     padding-top: 0;
     align-self: flex-start;
   }
@@ -92,6 +92,10 @@
 @media (max-width: 768px) {
   .header__menu {
     height: 740px;
+  }
+
+  .burger-visible .header-burger {
+    margin-top: 32px;
   }
 }
 
